--- a/style.css
+++ b/style.css
@@ -7,4 +7,6 @@ div{
     color: blueviolet;
     background-color: antiquewhite;
     padding: 10px;
+    margin-bottom: 20px;
+    margin-top: 10px;
 }
